<resources>

    <string name="app_name">车时商</string>
    <string name="order">客户预约记录</string>
    <string name="customer">我的客户</string>
    <string name="ask">最近客户咨询</string>
    <string name="sendMsg">发送消息</string>
    <string name="qrcode">我的二维码</string>

    <string name = "param_user_id">userId</string>

    <string name="rd_repeat">Repeat</string>
    <string name="rd_daily">Daily</string>
    <string name="rd_weekly">Weekly</string>
    <string name="rd_monthly">Monthly</string>
    <string name="rd_yearly">Yearly</string>
    <string name="rd_none">None</string>
    <string name="rd_every">Every</string>
    <string name="rd_day">day</string>
    <string name="rd_days">days</string>
    <string name="rd_week">week</string>
    <string name="rd_weeks">weeks</string>
    <string name="rd_month">month</string>
    <string name="rd_months">months</string>
    <string name="rd_year">year</string>
    <string name="rd_years">years</string>
    <string name="rd_forever">Forever</string>
    <string name="rd_until">Until</string>
    <string name="rd_until_full">Until a date</string>
    <string name="rd_for">For</string>
    <string name="rd_for_full">For a number of events</string>
    <string name="rd_month_same_day">on the same day each month</string>
    <string name="rd_month_last">on every last %s</string>
    <string name="rd_month_first">on every first %s</string>
    <string name="rd_month_second">on every second %s</string>
    <string name="rd_month_third">on every third %s</string>
    <string name="rd_month_fourth">on every fourth %s</string>
    <string name="rd_event">event</string>
    <string name="rd_events">events</string>

    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string name="SERVER_URL">http://auto.honsintech.com/manage</string>

    <string name="ENTITY_USER_INFO">userInfo</string>

    <string name="PARAM_LOGIN_LOGIN_NAME">username</string>
    <string name="PARAM_LOGIN_PASSWORD">password</string>
    <string name="PARAM_LOGIN_USERID">userId</string>


    <string name="INTERFACE_USER_ORDERS">/remote/orders</string>
    <string name="INTERFACE_ASKS">/remote/asks</string>
    <string name="AFTERSALESCONSULTANTID">afterSalesConsultantId</string>

</resources>
