<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:title="@string/app_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/AppBar"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbarStyle="outsideOverlay">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/ads">
            </ImageView>

            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:background="@drawable/border_bottom"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/main_orders"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_top"
                        android:padding="15dp"
                        android:text="@string/order"
                        android:textSize="18sp">
                </TextView>

                <TextView
                        android:id="@+id/main_ask"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp"
                        android:text="@string/ask"
                        android:textSize="18sp">
                </TextView>
                <TextView
                        android:id="@+id/main_customers"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_top"
                        android:padding="15dp"
                        android:text="@string/customer"
                        android:textSize="18sp">
                </TextView>
                <TextView
                        android:id="@+id/main_qrcode"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_top"
                        android:padding="15dp"
                        android:text="@string/qrcode"
                        android:textSize="18sp">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
